Bug 251858 - key sequence Ctrl+S is ambiguous per default
Summary: key sequence Ctrl+S is ambiguous per default
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-20 21:43 UTC by Ronny Standtke
Modified: 2011-11-17 01:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronny Standtke 2010-09-20 21:43:46 UTC
Version:           4.5.1 (using KDE 4.5.1) 
OS:                Linux

When I use konqueror as file browser and press Ctrl+S to select files matching a certain pattern, I just get the following error message instead:
"The key sequence 'Ctrl+S' is ambiguous. Use 'Configure Shortcuts' from the 'Settings' menu to solve the ambiguity. No action will be triggered."

Reproducible: Always

Steps to Reproduce:
1) boot with the latest Kubuntu-CD (10.04 at the time of writing)
2) open konqueror
3) navigate to "/"
4) press Ctrl+S

Actual Results:  
I get an error message about ambiguous key sequences.

Expected Results:  
I expected to get a dialog where I can input a search pattern instead of an error message. I also expected KDE to be configured without ambiguous key sequences per default.

OS: Linux (i686) release 2.6.32-24-generic
Compiler: cc
Comment 1 Dawit Alemayehu 2011-11-17 01:09:39 UTC
Git commit d800e027f994dccbe7089a306a42d2bff4e193ce by Dawit Alemayehu.
Committed on 17/11/2011 at 01:18.
Pushed by adawit into branch 'KDE/4.7'.

Changed the default shortcut key to CTRL+SHIFT+S to avoid conflict.

BUG: 251858
BUG: 251116
FIXED-IN: 4.7.4

M  +1    -1    konq-plugins/searchbar/searchbar.cpp

http://commits.kde.org/kde-baseapps/d800e027f994dccbe7089a306a42d2bff4e193ce
Comment 2 Dawit Alemayehu 2011-11-17 01:10:49 UTC
Git commit 1854428ec11efa2dfb982eb30c5a722230a15e71 by Dawit Alemayehu.
Committed on 17/11/2011 at 01:18.
Pushed by adawit into branch 'master'.

Changed the default shortcut key to CTRL+SHIFT+S to avoid conflict.

BUG: 251858
BUG: 251116
FIXED-IN: 4.7.4
(cherry picked from commit d800e027f994dccbe7089a306a42d2bff4e193ce)

M  +1    -1    konq-plugins/searchbar/searchbar.cpp

http://commits.kde.org/kde-baseapps/1854428ec11efa2dfb982eb30c5a722230a15e71