Changed the default shortcut key to CTRL+SHIFT+S to avoid conflict.

BUG: 251858
BUG: 251116
FIXED-IN: 4.7.4